added css to alot

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,14 @@
 main {
   width: 90%;
   margin: auto;
+  background: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+h2{
+  font-size: 2.5rem;
+  margin-bottom: 0;
 }
